Changelog
=========

0.8
---

- Only expose the reload view in Zope 2 development mode.
  [hannosch]

- In case of errors during ZCML reload, restore the original global site
  manager state, instead of leaving it in a broken state. This allows you to
  fix and retry the ZCML reload as many times as you need.
  [hannosch]


0.7 (2008-06-17)
----------------

- Merged the two distinct views into one called @@reload. Added a somewhat
  nicer UI to it and explain some of the current limitations on that page.
  [hannosch]

- Refactored ZCML loading code a bit. Always do an automatic code reload
  before reloading ZCML.
  [hannosch]

- Removed all blacklisting code.
  [hannosch]


0.6 (2008-06-11)
----------------

- Disabled blacklist until it can be made configurable. The speedup is hardly
  noticeable anyway, and it can block too much (especially if plone.reload
  is being used in a lib/python style deployment rather than as an egg).
  [optilude]


0.5 (2008-05-24)
----------------

- Merged r20 from http://bazaar.launchpad.net/~refreshng-dev/refreshng/dev.
  This fixes https://bugs.launchpad.net/refreshng/+bug/175898.
  [hannosch]

- Removed various levels of caching which turned out to be premature and
  caused lots of modules not to be found.
  [hannosch]


0.4 (2008-03-01)
----------------

- Made the code reload available as its own @@code_reload view.
  [hannosch]

- Integrated xreload.py from RefreshNG and added a first working version of a
  general manual code reload feature.
  [hannosch]


0.3 (2008-02-21)
----------------

- Fixed caching issues by invalidating all ZODB caches. If you have local site
  managers spread across multiple FileStorages this might still not work as
  expected.
  [hannosch]

- Added cleanup for CMFCore and PAS.
  [hannosch]


0.2 (2008-01-25)
----------------

- Added compatibility with Zope 2.10 / Plone 3.0.
  [hannosch]


0.1 (2008-01-25)
----------------

- Initial implementation based heavily on Products.RefreshNG.